function.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-func
spec:
  gateways:
  - kyma-gateway.kyma-system.svc.cluster.local
  hosts:
  - test.aj-ser1.cf-kyma-k8.shoot.canary.k8s-hana.ondemand.com
  http:
   - match:
     - uri:
         regex: /.*
     route:
     - destination:
         host: test-fn
         port:
           number: 80
       weight: 100
